--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Read the Meteor tutorials in a minimalist app",
   "main": "tutorial-viewer.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
-    "babel-runtime": "^6.23.0",
+    "@babel/runtime": "^7.2.0",
     "core-js": "^2.6.1",
     "meteor-node-stubs": "^0.2.6"
   },
